Closed Bug 203892 Opened 22 years ago Closed 22 years ago

fix xpinstall in MingW

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: jonwil, Assigned: ssu0262)

Details

Attachments

(1 file)

basicly, xpinstall/src/nsInstallFolder.cpp used to pull varargs.h in but some fix or change to something somewhere made it not do it anymore. On MingW, this causes this particular file to not compile. Changing it to #include <varargs.h> makes it compile (and the whole MingW build work) properly again.
Attached patch patchSplinter Review
Attachment #122087 - Flags: superreview?
Attachment #122087 - Flags: review?(ssu)
Flags: blocking1.4b?
Attachment #122087 - Flags: superreview?(dmose)
Attachment #122087 - Flags: superreview?
Attachment #122087 - Flags: review?(ssu)
Attachment #122087 - Flags: review+
Attachment #122087 - Flags: superreview?(dmose) → superreview+
Comment on attachment 122087 [details] [diff] [review] patch really silly portability fix, a=leaf
Attachment #122087 - Flags: approval1.4b+
patch checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Sometime, somewhere someone has to change this because "GCC no longer implements <varargs.h>." #error "Revise your code to use <stdarg.h>."
This only matters for win32 (because of the #ifdef XP_WIN). The Visual C++ tinderboxes compile just fine so its onviously not a problem for Visual C++ users. And it compiles just fine with the latest official downloads of GCC,MingW etc from the MingW web-site, I cant see anything wrong with it.
verified code fix
Status: RESOLVED → VERIFIED
Flags: blocking1.4b?
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: