checking in patch from jonwil@tpgi.com.au for bug 203892 - fix xpinstall in MingW. r=ssu, sr=dmose, a=leaf